src/components/Editor.module.css
.Editor {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    max-width: 1300px;
    justify-content: space-between;
    gap: 1em;
}

.cover {
    width: 100vw;
    max-width: 574px;
    border-radius: 9% 4%;
}

.settings {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.settings > :where(:not(:last-child)) {
    margin-bottom: 1em;
}

.settingsSliders {
    composes: settings;
    order: 2;
}

.hidden {
    display: none;
}

.canvasContainer {
    position: sticky;
    top: 0;
    max-height: 574px;
}

.coverLoading {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    aspect-ratio: 1;
    color: rgb(240, 225, 255);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: xx-large;
    font-weight: 900;
    border-radius: 5%;
}

.button {
    text-align: left;
    background-color: var(--text-color);
    color: var(--bg-color);
    border: none;
    font-size: var(--fs-1);
    border-radius: 40px 20px;
    padding-left: 0.6em;
}

@media (min-width: 600px) {
    .canvasContainer {
        order: 1;
    }
}

